# NCEP_Data_Grabber

./: LICENSE.txt  MANIFEST.in  README.md  python_cleanup.sh  setup.cfg  setup.py
docs/: NCEP_Notebook.ipynb  Server_Request_Codes.docx
ncep_client/: __init__.py  parser.py
ncep_client/gfs/: __init__.py  gfs_parser.py
ncep_client/nam/: __init__.py  nam_parser.py
