[metadata]
name = ncep_client
author = Aaron Valoroso
author_email = valoroso99@gmail.com
summary = Gets data from the NCEP product inventory.
description-file = README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules